# agentic-learning

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml  pyrightconfig.json  requirements.txt
.zed/: debug.json  settings.json
artifacts/evals/: task_decomposer_eval_note_v1.md  task_decomposer_eval_summary_v1.json  task_decomposer_failure_log_v1.md
docs/: Project1_Prompt_Contracts_And_Failure_Modes.md  Project1_Task_Decomposer_Workflow.md  Project2_PR_Review_Workflow.md
src/agentic_learning/: __init__.py  agent_tool_call.py  agent_tool_routing_demo.py  direct_tool_call.py  main.py  pr_review_consolidation_policy.py  pr_review_human_approval_policy.py  pr_reviewer_graph.py  run_task_decomposer_eval.py  run_task_decomposer_failure_log.py  structured_agent_tool_call.py  structured_pr_architecture_review_agent.py  structured_pr_architecture_review_agent_call.py  structured_pr_consolidation_review_agent.py  structured_pr_consolidation_review_agent_call.py  structured_pr_review_intake_agent.py  structured_pr_review_intake_agent_call.py  structured_pr_risk_review_agent.py  structured_pr_risk_review_agent_call.py  structured_pr_testing_review_agent.py  structured_pr_testing_review_agent_call.py  structured_task_decomposer_agent_call.py  task_decomposer_demo.py  task_decomposer_graph.py  (+8 more)
tests/: test_pr_review_consolidation_policy.py  test_pr_review_human_approval_policy.py  test_pr_reviewer_graph.py  test_task_decomposer_eval_dataset.py  test_task_decomposer_eval_runner.py  test_task_decomposer_failure_log.py  test_task_decomposer_workflow.py
(+32 files in other folders)
